# agentic-research-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README copy.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  daily-comment.yml
alembic/: env.py
alembic/versions/: 20260620_0001_initial_schema.py
app/: __init__.py  main.py
app/agents/: __init__.py  deepagents_adapter.py  nodes.py  prompts.py  state.py  workflow.py
app/api/: __init__.py  routes.py  schemas.py
app/core/: __init__.py  config.py  logging.py  observability.py
app/db/: __init__.py  models.py  repositories.py  session.py
app/rag/: __init__.py  chunking.py  embeddings.py  ingestion.py  loaders.py  schemas.py  vector_store.py
app/services/: __init__.py  research_service.py
app/web/static/: styles.css
app/web/templates/: dashboard.html  run_detail.html
tests/: test_api.py  test_deepagents_adapter.py  test_rag.py  test_settings.py  test_workflow.py
